Fix calculator page visibility - remove CSS rule hiding page-content
The rule `.mobile-nav + div:not(.main-wrapper)` was incorrectly hiding
the `.page-content` div on the calculator page because it immediately
follows `.mobile-nav` in the DOM structure.

--- a/css/mobile-optimizations.css
+++ b/css/mobile-optimizations.css
@@ -382,8 +382,7 @@ html {
 
 /* Also target siblings directly for browsers that don't support :has() */
 .header ~ .navbar-search_mobile-component,
-.mobile-nav ~ .navbar-search_mobile-component,
-.mobile-nav + div:not(.main-wrapper) {
+.mobile-nav ~ .navbar-search_mobile-component {
   display: none !important;
 }
 
